--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <!--[if lt IE 10]>
             <p class="old-IE">Votre navigateur est obsolète, cliquez <a href="http://browsehappy.com/" target="_blank">ici</a> pour le mettre à jour</p>
         <![endif]-->
-        <div></div>
+        <div id="main" class="grid"></div>
     </body>
     <!-- Libs -->
-    <script src="app/index.js"></script>
     <script src="app/secret.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="dist/js/masonry.min.js"></script>
+    <script src="app/index.js"></script>
 </html>
